processed/gerrit/txt_full/59142.txt
Change:     59142
Subject:    LU-19859 target: Remove sync_lock_cancel_*
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/59142
Change-Id:  Idc146b5137981eaa719bc1c050f82c0e13ee5a48
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Oleg Drokin
Created:    2025-05-07 21:41:24.000000000
Updated:    2025-05-07 21:50:44.000000000
Patch Set:  1
Insertions: +0
Deletions:  -118
Comments:   1 (0 unresolved)

--- Commit Message ---
LU-19859 target: Remove sync_lock_cancel_*

sysfs functions to show and setvalue of sync_lock_cancel
have been deprecated for a while so perhaps it's finally
time to let them go?

Change-Id: Idc146b5137981eaa719bc1c050f82c0e13ee5a48
Test-Parameters: trivial
Signed-off-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Oleg Drokin, 2025-05-07 21:41:24.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-05-07 21:42:03.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-05-07 21:44:21.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

 make[4]: *** [scripts/Makefile.build:249: /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/target/tgt_main.o] Error 1
make[3]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre/ptlrpc] Error 2
make[2]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre] Error 2
make[1]: *** [Makefile:1944: /home/green/git/lustre-release] Error 2
make: *** [autoMakefile:1232: modules] Error 2
 /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/target/tgt_main.c:143:10: error: ‘lustre_attr_sync_lock_cancel’ undeclared here (not in a function); did you mean ‘tgt_sync_lock_cancel’?
   143 |         &lustre_attr_sync_lock_cancel.attr,
       |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
       |          tgt_sync_lock_cancel

--- Message (Lustre Gerrit Janitor, 2025-05-07 21:45:26.000000000) ---
Patch Set 1:

(1 comment)

centos7: Compile failed

rhel8.5: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/51503/results.html

--- Message (Oleg Drokin, 2025-05-07 21:50:44.000000000) ---
Abandoned

err, I guess this is too wide of a removal, I only need to remove the exports
